# emuNEX-client

./: CONFIGURATIONS.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  publish.yml  tauri.yml
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  store.rs  utils.rs
src-tauri/src/commands/: auth.rs  download.rs  drpc.rs  emulator.rs  http.rs  input.rs  mod.rs  play.rs  save.rs  storage.rs
src-tauri/src/mappers/: duckstation.rs  mesen.rs  mgba.rs  mod.rs  project64.rs  snes9x.rs  vbam.rs
src/components/: Logout.vue
src/components/cards/: ConsoleStorageCard.vue  EmulatorCard.vue  RomCard.vue
src/components/games/: GameCard.vue  GameContextMenu.vue  GameInfo.vue  GameLibrary.vue  GameList.vue  PlayWithModal.vue  SearchSection.vue  ShelfManager.vue
src/components/modals/: DownloadEmulatorsModal.vue  EditEmulatorModal.vue  InstallModal.vue  MultiDiscDisclaimer.vue  ReportGameIssue.vue  SaveConflict.vue  ServerSwitcher.vue  UpdateEmulatorModal.vue
src/components/ui/: AlertModal.vue  Badge.vue  Button.vue  Heading.vue  IconButton.vue  Input.vue  Modal.vue  PillButton.vue  Select.vue  Spinner.vue  Switch.vue  Text.vue  TitleBar.vue  Toast.vue  Tooltip.vue
src/layouts/: ShellLayout.vue
src/lib/: activity.ts  format.ts  http.ts  opener.ts  rpc.ts  store.ts  useControllerNav.ts  useToast.ts
src/pages/: AboutView.vue  DownloadsView.vue  EmulatorView.vue  IndexView.vue  InputsView.vue  LoginView.vue  ManageView.vue  RequestViewer.vue  SearchView.vue  SettingsView.vue  StorageView.vue  SystemStorageView.vue
src/stores/: AuthStore.ts  ConsoleStore.ts  ControllerStore.ts  DevStore.ts  DownloadStore.ts  EmulatorStore.ts  GameStore.ts  MetadataStore.ts  RomStore.ts  ThemeStore.ts  UpdateStore.ts  UserStore.ts
src/styles/: _fonts.scss  _mixins.scss  _variables.scss  main.scss
src/utils/: http.ts
