[package]
name = "emuNEX-client"
version = "0.1.0"
description = "Emulation made easy."
authors = ["chloecinders"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
futures-util = "0.3.32"
zip = "8.2.0"
tauri-plugin-process = "2"
chrono = { version = "0.4.44", features = ["serde"] }
tauri-plugin-dialog = "2"
base64 = "0.22.1"
tauri-plugin-fs = "2"
url = "2.5.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

